--- a/contributors/ttwf_tokyo/tmtysk/submitted/flex-lines/multi-line-wrap-with-row-reverse.html
+++ b/contributors/ttwf_tokyo/tmtysk/submitted/flex-lines/multi-line-wrap-with-row-reverse.html
@@ -5,7 +5,7 @@
   <link rel="author" title="tmtysk" href="mailto:tmtysk@gmail.com">
   <link rel="reviewer" title="Tab Atkins" href="mailto:jackalmage@gmail.com">
   <link rel="help" href="http://dev.w3.org/csswg/css-flexbox/#flex-lines">
-  <link rel="match" href="./multi-line-wrap-with-row-reverse-ref.html">
+  <link rel="match" href="multi-line-wrap-with-row-reverse-ref.html">
   <meta name="assert" content="This test check that a flex container wraps blocks multiline in row-reverse direction.">
   <style>
     #test {
