--- a/contributors/ttwf_tokyo/tmtysk/submitted/flex-lines/multi-line-wrap-reverse-column-reverse.html
+++ b/contributors/ttwf_tokyo/tmtysk/submitted/flex-lines/multi-line-wrap-reverse-column-reverse.html
@@ -4,7 +4,7 @@
   <title>CSS Test: flex container multiline wrapping-reverse in column-reverse direction.</title>
   <link rel="author" title="tmtysk" href="mailto:tmtysk@gmail.com">
   <link rel="reviewer" title="Tab Atkins" href="mailto:jackalmage@gmail.com">
-  <link rel="help" href="http://dev.w3.org/csswg/css-flexbox/#flex-lines">
+  <link rel="help" href="http://dev.w3.org/csswg/css3-flexbox-3/#flex-lines">
   <link rel="match" href="multi-line-wrap-reverse-column-referse-ref.html">
   <meta name="assert" content="This test check that a flex container reverse-wraps blocks multiline in column-reverse direction.">
   <style>
