--- a/contributors/ttwf_tokyo/takenspc/submitted/filter-contrast-002.html
+++ b/contributors/ttwf_tokyo/takenspc/submitted/filter-contrast-002.html
@@ -4,11 +4,12 @@
     <title>CSS Filter contrast: CSS contrast filter shotrhand</title>
     <link rel="author" title="Takeshi Kurosawa" href="mailto:taken.spc@gmail.com">
     <link rel="reviewer" title="Dirk Schulze" href="mailto:dschulze@adobe.com">
-    <link rel="help" href="https://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html#FilterProperty">
-    <link rel="help" href="https://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html#contrastltnumbergt-ltpercentagegt">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#FilterProperty">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#contrastltnumbergt-ltpercentagegt">
     <link rel="match" href="filter-contrast-002-ref.html">
     <meta name="flags" content="">
-    <meta name="assert" content="CSS contrast filter will apply a componet transfer to the div element to adjust the contrast of the colors. Since contrast is 0%, it must be the completely gray.">
+    <meta name="assert" content="CSS contrast filter will apply a component transfer to the div element to adjust the 
+    contrast of the colors. Since contrast is 0%, it must be the completely gray.">
     <style type="text/css">
    
        div {
