--- a/contributors/ttwf_tokyo/tmtysk/submitted/flex-lines/multi-line-wrap-reverse-row-reverse.html
+++ b/contributors/ttwf_tokyo/tmtysk/submitted/flex-lines/multi-line-wrap-reverse-row-reverse.html
@@ -4,7 +4,8 @@
   <title>CSS Test: flex container multiline wrapping-reverse in row-reverse direction.</title>
   <link rel="author" title="tmtysk" href="mailto:tmtysk@gmail.com">
   <link rel="reviewer" title="Tab Atkins" href="mailto:jackalmage@gmail.com">
-  <link rel="help" href="http://dev.w3.org/csswg/css3-flexbox/#flex-lines">
+  <link rel="help" href="http://dev.w3.org/csswg/css3-flexbox/#flex-wrap-property">
+  <link rel="help" href="http://dev.w3.org/csswg/css3-flexbox/#flex-direction-property">
   <link rel="match" href="multi-line-wrap-reverse-row-referse-ref.html">
   <meta name="assert" content="This test check that a flex container reverse-wraps blocks multiline in row-reverse direction.">
   <style>
