--- a/contributors/ttwf_tokyo/Tayatt/submitted/filters-sepia-001-test.html
+++ b/contributors/ttwf_tokyo/Tayatt/submitted/filters-sepia-001-test.html
@@ -4,9 +4,9 @@
     <title>CSS Filter Test: Test sepia shorthand with value 1</title>
     <link rel="author" title="Takaki Yasuma" href="mailto:takakiyasuma@gmail.com">
     <link rel="reviewer" title="Dirk Schulze" href="mailto:dschulze@adobe.com">
-    <link rel="help" href="https://dvcs.w3.org/hg/FXTF/raw-file/default/filters/index.html#sepialtnumbergt-ltpercentagegt">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#FilterProperty">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#grayscaleltnumbergt-ltpercentagegt">
     <link rel="match" href="filters-sepia-001-ref.html">
-    <meta name="flags" content="">
     <meta name="assert" content="If the test runs, you should see a field drab colored rectangle.">
     <style type="text/css">
    
