--- a/eventsource/format-field-retry-bogus.htm
+++ b/eventsource/format-field-retry-bogus.htm
@@ -8,7 +8,7 @@
   <body>
     <div id="log"></div>
     <script>
-      var test = async_test()
+      var test = async_test("", {timeout: 2500})
       test.step(function() {
         var timeoutms = 2000,
             source = new EventSource("resources/message.php?message=retry%3A2000%0Aretry%3A1000x%0Adata%3Ax"),
