--- a/namefromauthor-requ/865.html
+++ b/namefromauthor-requ/865.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">    <title>test 865</title>
   </head>
   <body>
-    <div id="test" aria-label="test" role="dialog"></div>
+    <div id="test" aria-label="foo" role="dialog"></div>
   </body>
 </html>
 
