--- a/namefromauthor-requ/866.html
+++ b/namefromauthor-requ/866.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">    <title>test 866</title>
   </head>
   <body>
-    <div id="test" aria-label="test" role="document"></div>
+    <div id="test" aria-label="foo" role="document"></div>
   </body>
 </html>
 
