--- a/shadow-dom/shadow-trees/text-decoration.html
+++ b/shadow-dom/shadow-trees/text-decoration.html
@@ -6,6 +6,7 @@
 		<link rel="match" href="text-decoration-ref.html">
 		<link rel="author" title="Masaya Iseki" href="mailto:iseki.m.aa@gmail.com">
 		<link rel="help" href="https://www.w3.org/TR/shadow-dom/#text-decoration-property">
+		<script type="../testcommon.js"></script>
 		<meta name="assert" content="When shadow host has text-decoration, shadow tree is not affected.">
 	</head>
 	<body>
@@ -18,29 +19,24 @@
 		<div id="blink" style="text-decoration: blink">
 		</div>
 		<script>
-			var parent = document.getElementById('line-through');
-			var shadow = parent.webkitCreateShadowRoot();
-			var child = document.createElement('span');
-			child.textContent = "if NOT line throughed, it is success.";
-			shadow.appendChild(child);
-
-			parent = document.getElementById('overline');
-			shadow = parent.webkitCreateShadowRoot();
-			child = document.createElement('span');
-			child.textContent = "if NOT overlined, it is success.";
-			shadow.appendChild(child);
-
-			parent = document.getElementById('underline');
-			shadow = parent.webkitCreateShadowRoot();
-			child = document.createElement('span');
-			child.textContent = "if NOT underlined, it is success.";
-			shadow.appendChild(child);
-
-			parent = document.getElementById('blink');
-			shadow = parent.webkitCreateShadowRoot();
-			child = document.createElement('span');
-			child.textContent = "if NOT blinked, it is success.";
-			shadow.appendChild(child);
+			var text-decoration = [
+				'line-through',
+				'overline',
+				'underline',
+				'blink'
+			];
+			var descrption = [
+				'if NOT line throughed, it is success.',
+				'if NOT overlined, it is success.',
+				'if NOT underlined, it is success.',
+				'if NOT blinked, it is success.'
+			]
+			for (var i=0;i<text-decoration.length;++i) {
+				var shadowRoot = createSR(text-decoration[i]);
+				var child = document.createElement('span');
+				child.textContent = descrption[i];
+				shadowRoot.appendChild(child);
+			}
 		</script>
 	</body>
 </html>
