--- a/XMLHttpRequest/send-authentication-basic-setrequestheader-existing-session.htm
+++ b/XMLHttpRequest/send-authentication-basic-setrequestheader-existing-session.htm
@@ -24,7 +24,7 @@
         client.send(null)
         assert_equals(client.responseText, 'open-user\nopen-pass')
         assert_equals(client.status, 200)
-        assert_equals(client.getResponseHeader('x-challenge'), 'DID-NOT')
+        assert_equals(client.getResponseHeader('x-challenge'), 'DID')
         // Another request, this time user,pass is omitted and an Authorization header set explicitly
         // Here the URL is known to require authentication (from the request above), and the UA has cached open-user:open-pass credentials
         // However, these session credentials should now be overridden by the setRequestHeader() call so the UA should immediately
