--- a/contributors/adobe/submitted/regions/interactivity/keyboard/regions-keyboard-events-007.html
+++ b/contributors/adobe/submitted/regions/interactivity/keyboard/regions-keyboard-events-007.html
@@ -3,7 +3,7 @@
     <head>
         <title>CSS Regions: onkeydown and onkeyup events inside multiple regions using Tab key in forms</title>
         <link rel="author" title="David Alcala" href="mailto:dalcala@adobe.com">
-        <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"><!-- 07-19-2013 -->
+        <link rel="reviewer" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"><!-- 07-19-2013 -->
         <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
         <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
         <link rel="help" href="http://www.w3.org/TR/css3-regions/#relation-to-document-events">
