--- a/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-vertical-rectangle-001.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-vertical-rectangle-001.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <title>CSS Test: vertical rectangle shape-outside on floats, vertical-lr writing mode</title>
 <link rel="author" title="Bem Jones-Bey" href="mailto:bjonesbe@adobe.com">
-<link rel="help" href="http://dev.w3.org/csswg/css-shapes-1/#shape-outside-property">
+<link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">
 <link rel="match" href="shape-outside-floats-vertical-rectangle-001-reference.html">
 <meta name="flags" content="ahem">
 <script>
