--- a/contributors/adobe/submitted/regions/counters/extract-numbered-spans-display-only-some.html
+++ b/contributors/adobe/submitted/regions/counters/extract-numbered-spans-display-only-some.html
@@ -26,7 +26,7 @@
 			content: counter(spans) ".";
 			width: 2em;
 			margin: 0 .5em;
-			background: red;
+			background: green;
 			color: white;
 			text-align: center;
 		}
@@ -39,14 +39,14 @@
 	</head>
 	<body>
 		<!-- Numbered <p>-s and <div>-s using different counters, displayed as blocks via ::after -->
-		<p>Test passes if you see a light blue rectangle below, with three blocks of black text on a single line. Each block of text should be numbered with even numbers (2, 4, 6); the numbers should be white on a red background.</p>
+		<p>Test passes if you see a light blue rectangle below, with three blocks of black text on a single line. Each block of text should be numbered from 1 to 3 and contain the text &ldquo;Visible text <em>n</em>&rdquo; with <em>n</em> ranging from 1 to 3. The numbering should be white on a green background.</p>
 		<div id="container">
-			<span>A bit of text 1</span>
-			<span>A bit of text 2</span>
-			<span>A bit of text 3</span>
-			<span>A bit of text 4</span>
-			<span>A bit of text 5</span>
-			<span>A bit of text 6</span>
+			<span>Hidden bit of text 1</span>
+			<span>Visible text 1</span>
+			<span>Hidden bit of text 2</span>
+			<span>Visible text 2</span>
+			<span>Hidden bit of text 3</span>
+			<span>Visible text 3</span>
 		</div>
 		<div id="region"></div>
 	</body>
