--- a/pointerevents/pointerevent_releasePointerCapture_events_to_original_target.html
+++ b/pointerevents/pointerevent_releasePointerCapture_events_to_original_target.html
@@ -1,16 +1,14 @@
 ﻿<!doctype html>
 <html>
     <head>
-        <title>Pointer Event: releasePointerCapture() - subsequent events follow normal hitting testing mehcanisms</title>
+        <title>Pointer Event: releasePointerCapture() - subsequent events follow normal hitting testing mechanisms</title>
         <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
         <link rel="author" title="Microsoft" href="http://www.microsoft.com/"/>
         <meta name="assert" content="After invoking the releasePointerCapture method on an element, subsequent events for the specified pointer must follow normal hit testing mechanisms for determining the event target"/>
-
 	    <script src="http://w3c-test.org/resources/testharness.js"></script>
 		<!-- Additional helper script for common checks across event types -->
         <script type="text/javascript" src="pointerevent_support.js"></script>
         <script type="text/javascript">
-
             var detected_pointertypes = {};
             var test_pointerEvent = async_test("lostpointercapture: subsequent events to target.");  // set up test harness
             // showPointerTypes is defined in pointerevent_support.js
@@ -127,7 +125,7 @@
     </head>
     <body onload="run()">
         <div id="listener"></div>
-        <h1>Pointer Event: releasePointerCapture() - subsequent events follow normal hitting testing mehcanisms</h1>
+        <h1>Pointer Event: releasePointerCapture() - subsequent events follow normal hitting testing mechanisms</h1>
         <h4> 
             Test Description: 
             After invoking the releasePointerCapture method on an element, subsequent events for the specified 
