--- a/custom-elements/concepts/custom-elements-type-allowed-chars-first-char.html
+++ b/custom-elements/concepts/custom-elements-type-allowed-chars-first-char.html
@@ -15,87 +15,77 @@
 <div id="log"></div>
 <script type="text/javascript">
 
-function testArray(doc, array, positive) {
-    for (var i=0; i<array.length; i++){
-        var c = array[i];
-        var name = String.fromCharCode(c) + '-x' + c.toString(16);
-        if (positive) {
-            try {
-                doc.register(name);
-            } catch (e) {
-                assert_unreached('The custom element name \'' + name +
-                       '\' (char code U+' + c.toString(16) + ') ' +
-                       'should be registered without errors');
-            }
-        } else {
-            assert_throws(null,
-                          function(){doc.register(name);},
-                          'Registering invalid custom element name \'' + name +
-                            '\' (char code U+' + c.toString(16) + ') ' +
-                            'should fail');
-        }
+function checkValidName(doc, name) {
+    try {
+        doc.register(name);
+    } catch (e) {
+        assert_unreached('The custom element name \'' + name +
+               '\' should be registered without errors');
     }
 }
 
-function testRangesArray(doc, array, positive) {
-    for (var i=0; i<array.length; i+=2){
-        var low = array[i];
-        var high = array[i+1];
-        for (var c=low; c<=high; c++){
+function checkInvalidName(doc, name) {
+    assert_throws(null,
+        function(){ doc.register(name); },
+        'Registering invalid custom element name \'' + name +
+          '\' should fail');
+}
+
+// check each element of the supplied array with the checkFunction
+function testCharCodeArray(doc, charCodeArray, checkFunction) {
+    for (var i = 0; i < charCodeArray.length; i++){
+        var c = charCodeArray[i];
+        var name = String.fromCharCode(c) + '-x' + c.toString(16);
+        checkFunction(doc, name);
+    }
+}
+
+// check each element of the supplied ranges array with the checkFunction
+function testCharCodeRangesArray(doc, charCodeRangesArray, checkFunction) {
+    for (var i = 0; i < charCodeRangesArray.length; i += 2){
+        var rangeStart = charCodeRangesArray[i];
+        var rangeEnd = charCodeRangesArray[i+1];
+        for (var c = rangeStart; c <= rangeEnd; c++){
             var name = String.fromCharCode(c) + '-x' + c.toString(16);
-            if (positive){
-                try {
-                    doc.register(name);
-                } catch (e) {
-                    assert_unreached('The custom element name \'' + name +
-                       '\' (char code U+' + c.toString(16) + ') ' +
-                       'should be registered without errors');
-                }
-            } else {
-                assert_throws(null,
-                                function(){doc.register(name);},
-                              'Registering invalid custom element name \'' + name +
-                                 '\' (char code U+' + c.toString(16) + ') ' +
-                                 'should fail');
-            }
+            checkFunction(doc, name);
         }
     }
 }
 
 test(function(){
-    testArray(newHTMLDocument(), ['_'.charCodeAt(0)], true);
+    testCharCodeArray(newHTMLDocument(), ['_'.charCodeAt(0)], checkValidName);
 }, 'Registering valid custom element name starting with \'_\' char');
 
 test(function(){
-    testArray(newHTMLDocument(), BASE_CHARS_SINGLE, true);
+    testCharCodeArray(newHTMLDocument(), BASE_CHARS_SINGLE, checkValidName);
 }, 'Registering valid custom element name starting with single base chars');
 
 test(function(){
-    testRangesArray(newHTMLDocument(), BASE_CHARS_RANGES, true);
+    testCharCodeRangesArray(newHTMLDocument(), BASE_CHARS_RANGES, checkValidName);
 }, 'Registering valid custom element name starting with base chars ranges');
 
 test(function(){
-    testArray(newHTMLDocument(), IDEOGRAPHIC_CHARS_SINGLE, true);
+    testCharCodeArray(newHTMLDocument(), IDEOGRAPHIC_CHARS_SINGLE, checkValidName);
 }, 'Registering valid custom element name starting with single ideographic chars');
 
 test(function(){
-    testRangesArray(newHTMLDocument(), IDEOGRAPHIC_CHARS_RANGES, true);
+    testCharCodeRangesArray(newHTMLDocument(), IDEOGRAPHIC_CHARS_RANGES, checkValidName);
 }, 'Registering valid custom element name starting with ideographic chars ranges');
 
 test(function(){
-    testArray(newHTMLDocument(), ['.', '-', ':', '+', '='], false);
+    testCharCodeArray(newHTMLDocument(), ['.', '-', ':', '+', '='], checkInvalidName);
 }, 'Registering custom element starting with invalid character (general) should fail');
 
 test(function(){
-    testArray(newHTMLDocument(), COMBINING_CHARS, false);
+    testCharCodeArray(newHTMLDocument(), COMBINING_CHARS, checkInvalidName);
 }, 'Registering custom element starting with invalid character (combining char) should fail');
 
 test(function(){
-    testArray(newHTMLDocument(), EXTENDER_CHARS, false);
+    testCharCodeArray(newHTMLDocument(), EXTENDER_CHARS, checkInvalidName);
 }, 'Registering custom element starting with invalid character (extender char) should fail');
 
 test(function(){
-    testRangesArray(newHTMLDocument(), DIGIT_CHARS_RANGES, false);
+    testCharCodeRangesArray(newHTMLDocument(), DIGIT_CHARS_RANGES, checkInvalidName);
 }, 'Registering custom element starting with invalid character (digit char) should fail');
 
 
