--- a/html/infrastructure/urls/resolving-urls/utf-8.html
+++ b/html/infrastructure/urls/resolving-urls/utf-8.html
@@ -5,4 +5,4 @@
 <script src="/resources/testharnessreport.js"></script>
 <script src="/common/utils.js"></script>
 <div id=log></div>
-<script src="resolve-url.js?encoding=utf-8&pipe=sub"></script>
+<script src="resources/resolve-url.js?encoding=utf-8&pipe=sub"></script>
