--- a/eventsource/event-data.html
+++ b/eventsource/event-data.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>EventSource: lines and data parsing</title>
-    <meta rel=help href="http://dev.w3.org/html5/eventsource/#event-stream-interpretation">
+    <meta rel=help href="http://www.w3.org/TR/eventsource/#event-stream-interpretation">
 	<meta rel=assert title="If the line is empty (a blank line) Dispatch the event, as defined below.">
 	<meta rel=assert title="If the line starts with a U+003A COLON character (:) Ignore the line.">
 	<meta rel=assert title="If the line contains a U+003A COLON character (:) 
@@ -14,15 +14,15 @@
 Process the field using the steps described below, using the whole line as the field name, and the empty string as the field value.
 	">
 
-    <script src="http://w3c-test.org/resources/testharness.js"></script>
-    <script src="http://w3c-test.org/resources/testharnessreport.js"></script>
+    <script src="/resources/testharness.js"></script>
+    <script src="/resources/testharnessreport.js"></script>
   </head>
   <body>
     <div id="log"></div>
     <script>
       var test = async_test(document.title)
       test.step(function() {
-        var source = new EventSource("resources/message.php"),
+        var source = new EventSource("resources/message2.php"),
         counter = 0
         source.onmessage = function(e) {
         test.step(function() {
