--- a/html/browsers/history/the-location-interface/security_location_0.htm
+++ b/html/browsers/history/the-location-interface/security_location_0.htm
@@ -16,7 +16,7 @@
         var frame = document.getElementById('testframe');
         try {
           frame.setAttribute('onload', '');
-          frame.contentWindow.src = 'http://dev.w3.org/';
+          frame.contentWindow.location = 'http://dev.w3.org/';
         } catch(exc) {
           assert_unreached("The following exception occured " + exc);
         }
